現状の設定を反映した
